# Few-shot-3D-Medical-Image-Segmentation

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: requirements-checkpoint.txt  requirements-monai-checkpoint.txt
artifacts/analysis/: ablation_summary.csv  all_history.csv  all_validation_metrics.csv  best_fold_metrics.csv  efficiency_table.csv  per_class_dice.csv
artifacts/data_inspection/: class_voxel_table.csv
artifacts/data_inspection_detailed/: class_voxel_table.csv  manifest_training.csv
configs/: ablation_a2_dicece_focal.yaml  ablation_a4_resattn_tta.yaml  ablation_a5_swin_unetr.yaml  baseline_unet3d.yaml  detailed_resattn_unet3d.yaml  improved_resattn_unet3d.yaml  smoke.yaml
configs/.ipynb_checkpoints/: ablation_a1_fg_aug-checkpoint.yaml  improved_resattn_unet3d-checkpoint.yaml
predictions/test/: test_metrics.csv
predictions/test_detailed/: test_metrics.csv
predictions/test_resattn_BROKEN/: test_metrics.csv
report/tables/: ablation_summary.tex  per_class_dice.tex
scripts/: create_synthetic_mrbrains.py  evaluate_predictions.py  inspect_data.py  predict_test.py  prepare_report_assets.py  profile_model.py  revalidate_with_tta.py  run_full_pipeline.sh  run_loocv.py  run_remaining.sh  summarise_experiments.py  train.py
scripts/.ipynb_checkpoints/: run_ablations-checkpoint.py  train-checkpoint.py
src/mrbrains/: __init__.py  config.py  data.py  engine.py  infer.py  io.py  labels.py  losses.py  metrics.py  viz.py  (+1 more)
tests/: test_config.py  test_data.py  test_inference.py  test_labels.py  test_losses.py  test_metrics.py  test_shapes.py
(+108 files in other folders)
