[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mrbrains"
version = "0.1.0"
description = "MRBrainS13 few-shot 3D segmentation pipeline"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "numpy>=1.22",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "tqdm>=4.65",
  "PyYAML>=6.0",
  "nibabel>=5.0",
  "tensorboard>=2.12",
]

[tool.setuptools.packages.find]
where = ["src"]

