[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mrbrains13-fewshot"
version = "0.1.0"
description = "Few-shot 3D brain tissue segmentation pipeline for MRBrainS13."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "numpy>=1.22",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "tqdm>=4.65",
  "PyYAML>=6.0",
  "nibabel>=5.0",
  "tensorboard>=2.12",
]

[project.optional-dependencies]
monai = ["monai>=1.3", "einops>=0.6"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
